--- a/catalog/cards.yaml
+++ b/catalog/cards.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Bank API - Card Management
   version: 1.0.0
-  description: API for managing debit and credit cards
+  description: API for managing bank cards
 
 paths:
   /cards:
@@ -18,6 +18,57 @@ paths:
         '200':
           description: Card created successfully
 
+  /cards/{card_id}:
+    get:
+      summary: Get Card Details
+      parameters:
+        - in: path
+          name: card_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Card'
+        '404':
+          description: Card not found
+    put:
+      summary: Update Card
+      parameters:
+        - in: path
+          name: card_id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Card'
+      responses:
+        '200':
+          description: Card updated successfully
+        '404':
+          description: Card not found
+    delete:
+      summary: Delete Card
+      parameters:
+        - in: path
+          name: card_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Card deleted successfully
+        '404':
+          description: Card not found
+
   /cards/{card_id}/block:
     put:
       summary: Block Card
@@ -30,8 +81,6 @@ paths:
       responses:
         '200':
           description: Card blocked successfully
-        '404':
-          description: Card not found
 
   /cards/{card_id}/transactions:
     get:
@@ -53,9 +102,9 @@ paths:
                   transactions:
                     type: array
                     items:
-                      $ref: '#/components/schemas/CardTransaction'
+                      $ref: '#/components/schemas/Transaction'
         '404':
-          description: Card not found
+          description: No transactions found for this card
 
 components:
   schemas:
@@ -72,12 +121,17 @@ components:
           type: number
           format: float
 
-    CardTransaction:
+    Transaction:
       type: object
       properties:
+        id:
+          type: integer
+        card_id:
+          type: integer
         amount:
           type: number
           format: float
         transaction_date:
           type: string
           format: date-time
+
