--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,79 +1,65 @@
+
 version: '3.8'
 
 services:
   authentication:
-    image: jorgfernvi/authentication-api:latest
+    image: jorgfernvi/authentication-api-cloud:latest
     ports:
       - "8001:8001"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
 
   accounts:
-    image: jorgfernvi/accounts-api:latest
+    image: jorgfernvi/accounts-api-cloud:latest
     ports:
       - "8002:8002"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
 
   transactions:
-    image: jorgfernvi/transactions-api:latest
+    image: jorgfernvi/transactions-api-cloud:latest
     ports:
       - "8003:8003"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
 
   cards:
-    image: jorgfernvi/cards-api:latest
+    image: jorgfernvi/cards-api-cloud:latest
     ports:
       - "8004:8004"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
 
   loans:
-    image: jorgfernvi/loans-api:latest
+    image: jorgfernvi/loans-api-cloud:latest
     ports:
       - "8005:8005"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
 
   notifications:
-    image: jorgfernvi/notifications-api:latest
+    image: jorgfernvi/notifications-api-cloud:latest
     ports:
       - "8006:8006"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
 
   reports:
-    image: jorgfernvi/reports-api:latest
+    image: jorgfernvi/reports-api-cloud:latest
     ports:
       - "8007:8007"
-    environment:
-      DB_HOST: 44.218.163.17
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: utec
-      DB_NAME: bd_api_bank
+    networks:
+      - mynetwork
+
+  swagger-catalog:
+    image: jorgfernvi/swagger-catalog:latest
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./catalog:/usr/share/nginx/html/catalog
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
